kubernetes/configs/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: server

---

apiVersion: v1
kind: Namespace
metadata:
  name: client
